python/testData/quickFixes/PyAddImportQuickFixTest/qualifyWithAlreadyImportedModule/main.py
<warning descr="Unused import statement 'from pkg import src'">from pkg import src</warning>

<error descr="Unresolved reference 'MyClass'">My<caret>Class</error>
